fix img size on mobile view

--- a/style.css
+++ b/style.css
@@ -338,6 +338,10 @@ a:hover{
         font-size: 16px;
     }
     
+    .img-css img{
+        height: 300px;
+        width: 300px;
+    }
 
 
     .flex{
